# general-topic-classifier

./: .gitignore  Dockerfile_cpu  Dockerfile_cpu_multi  Dockerfile_cuda  README.md  config.properties  pyproject.toml  requirements.txt  requirements_dev.txt  setup_config.json  torchserve_handler.py
training/: README.md  classify.py  combine_datasets.py  export_onnx.py  model_training.py  requirements.txt
training/MPNetTokenizer/: special_tokens_map.json  tokenizer_config.json
training/nlptoolkit/: __init__.py
training/nlptoolkit/classification/models/: infer.py
training/nlptoolkit/classification/models/ADAN/: preprocessing_funcs.py  train_funcs.py  trainer.py
training/nlptoolkit/classification/models/BERT/: preprocessing_funcs.py  trainer.py
training/nlptoolkit/classification/models/ConvBERT/: preprocessing_funcs.py  train_funcs.py  trainer.py
training/nlptoolkit/classification/models/DEBERTA/: preprocessing_funcs.py  train_funcs.py  trainer.py
training/nlptoolkit/classification/models/DistilBERT/: __init__.py  preprocessing_funcs.py  train_funcs.py  trainer.py
training/src/: crawl_politics.py
