[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gentopicclassifier_plkmo"
version = "0.0.1"
authors = [
  { name="Wee Tee Soh", email="weeteesoh345@gmail.com" },
]
description = "Topic classifier for short-to-medium length texts. 16 general topics."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Attribution-NonCommercial-ShareAlike 4.0 International License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/plkmo/general-topic-classifier"
"Bug Tracker" = "https://github.com/plkmo/general-topic-classifier/issues"